refactor: refactor resources [x] model to entity [x] removes list resource [x] changes TimeRecordStatus iota [x] changes structure proto message [x] changes i/o resources and routers
