# domain/service/time_record.go
@@ -4,7 +4,7 @@ import (
 	"context"
 	"time"
 
-	"dev.azure.com/c4ut/TimeClock/_git/time-record-service/domain/model"
+	"dev.azure.com/c4ut/TimeClock/_git/time-record-service/domain/entity"
 	"dev.azure.com/c4ut/TimeClock/_git/time-record-service/domain/repository"
 	"dev.azure.com/c4ut/TimeClock/_git/time-record-service/logger"
 	"go.elastic.co/apm"
@@ -15,13 +15,13 @@ type TimeRecordService struct {
 	TimeRecordRepository repository.TimeRecordRepositoryInterface
 }
 
-func (p *TimeRecordService) Register(ctx context.Context, _time time.Time, description, employeeID string) (*model.TimeRecord, error) {
+func (p *TimeRecordService) RegisterTimeRecord(ctx context.Context, _time time.Time, description, employeeID, createdBy string) (*string, error) {
 	span, ctx := apm.StartSpan(ctx, "Register", "time record domain service")
 	defer span.End()
 
 	log := logger.Log.WithFields(apmlogrus.TraceContext(ctx))
 
-	timeRecord, err := model.NewTimeRecord(_time, description, employeeID)
+	timeRecord, err := entity.NewTimeRecord(_time, description, employeeID, createdBy)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
@@ -29,7 +29,7 @@ func (p *TimeRecordService) Register(ctx context.Context, _time time.Time, descr
 	}
 	log.WithField("timeRecord", timeRecord).Info("timeRecord created")
 
-	err = p.TimeRecordRepository.Register(ctx, timeRecord)
+	timeRecordID, err := p.TimeRecordRepository.RegisterTimeRecord(ctx, timeRecord)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
@@ -37,20 +37,20 @@ func (p *TimeRecordService) Register(ctx context.Context, _time time.Time, descr
 	}
 	log.WithField("timeRecord", timeRecord).Info("timeRecord registered")
 
-	return timeRecord, nil
+	return timeRecordID, nil
 }
 
-func (p *TimeRecordService) Approve(ctx context.Context, id, employeeID string) (*model.TimeRecord, error) {
+func (p *TimeRecordService) ApproveTimeRecord(ctx context.Context, id, employeeID string) error {
 	span, ctx := apm.StartSpan(ctx, "Approve", "time record domain service")
 	defer span.End()
 
 	log := logger.Log.WithFields(apmlogrus.TraceContext(ctx))
 
-	timeRecord, err := p.TimeRecordRepository.Find(ctx, id)
+	timeRecord, err := p.TimeRecordRepository.FindTimeRecord(ctx, id)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
-		return nil, err
+		return err
 	}
 	log.WithField("timeRecord", timeRecord).Info("timeRecord finded")
 
@@ -58,31 +58,31 @@ func (p *TimeRecordService) Approve(ctx context.Context, id, employeeID string) 
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
-		return nil, err
+		return err
 	}
 	log.WithField("timeRecord", timeRecord).Info("timeRecord approved")
 
-	err = p.TimeRecordRepository.Save(ctx, timeRecord)
+	err = p.TimeRecordRepository.SaveTimeRecord(ctx, timeRecord)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
-		return nil, err
+		return err
 	}
 
-	return timeRecord, nil
+	return nil
 }
 
-func (p *TimeRecordService) Refuse(ctx context.Context, id, refusedReason, employeeID string) (*model.TimeRecord, error) {
+func (p *TimeRecordService) RefuseTimeRecord(ctx context.Context, id, refusedReason, employeeID string) error {
 	span, ctx := apm.StartSpan(ctx, "Refuse", "time record domain service")
 	defer span.End()
 
 	log := logger.Log.WithFields(apmlogrus.TraceContext(ctx))
 
-	timeRecord, err := p.TimeRecordRepository.Find(ctx, id)
+	timeRecord, err := p.TimeRecordRepository.FindTimeRecord(ctx, id)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
-		return nil, err
+		return err
 	}
 	log.WithField("timeRecord", timeRecord).Info("timeRecord finded")
 
@@ -90,27 +90,27 @@ func (p *TimeRecordService) Refuse(ctx context.Context, id, refusedReason, emplo
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
-		return nil, err
+		return err
 	}
 	log.WithField("timeRecord", timeRecord).Info("timeRecord refused")
 
-	err = p.TimeRecordRepository.Save(ctx, timeRecord)
+	err = p.TimeRecordRepository.SaveTimeRecord(ctx, timeRecord)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
-		return nil, err
+		return err
 	}
 
-	return timeRecord, nil
+	return nil
 }
 
-func (p *TimeRecordService) Find(ctx context.Context, id string) (*model.TimeRecord, error) {
+func (p *TimeRecordService) FindTimeRecord(ctx context.Context, id string) (*entity.TimeRecord, error) {
 	span, ctx := apm.StartSpan(ctx, "Find", "time record domain service")
 	defer span.End()
 
 	log := logger.Log.WithFields(apmlogrus.TraceContext(ctx))
 
-	timeRecord, err := p.TimeRecordRepository.Find(ctx, id)
+	timeRecord, err := p.TimeRecordRepository.FindTimeRecord(ctx, id)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
@@ -120,13 +120,13 @@ func (p *TimeRecordService) Find(ctx context.Context, id string) (*model.TimeRec
 	return timeRecord, nil
 }
 
-func (p *TimeRecordService) FindAllByEmployeeID(ctx context.Context, employeeID string, fromDate, toDate time.Time) ([]*model.TimeRecord, error) {
+func (p *TimeRecordService) SearchTimeRecords(ctx context.Context, employeeID string, fromDate, toDate time.Time) ([]*entity.TimeRecord, error) {
 	span, ctx := apm.StartSpan(ctx, "FindAllByEmployeeID", "time record domain service")
 	defer span.End()
 
 	log := logger.Log.WithFields(apmlogrus.TraceContext(ctx))
 
-	timeRecords, err := p.TimeRecordRepository.FindAllByEmployeeID(ctx, employeeID, fromDate, toDate)
+	timeRecords, err := p.TimeRecordRepository.SearchTimeRecords(ctx, employeeID, fromDate, toDate)
 	if err != nil {
 		log.WithError(err)
 		apm.CaptureError(ctx, err).Send()
